Fixed theme in dark mode (maintains light mode)

--- a/style/base.css
+++ b/style/base.css
@@ -5,13 +5,9 @@
 */
 
 .jp-react-widget {
-  /* color: var(--jp-ui-font-color1);
-  background: var(--jp-layout-color1);
-  font-size: 48px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  text-align: center; */
   margin: 0;
   padding: 0;
+  color: black;
+  background: white;
+  overflow: auto;
 }
